Update and rename about.md to about.html

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -4,7 +4,7 @@ title:
 author_profile: true
 redirect_from: 
   - /about/
-  - /about.html
+  - /about.md
 ---
 
 I work with \href{https://pripyat.mit.edu/}{Prof. Michael Short} in the Mesoscale Nuclear Materials lab, where my work focuses on radiation damage in polymers. My thesis focuses on low dose α-irradiation effects in fluorinated polymers, with potential applications to historic materials control and accounting. Previously, I graduated with my SB in Chemical Engineering and my SB in Literature from MIT, advised by Prof. Greg Rutledge and by Prof. Noel Jackson.
